--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,3 @@
-# See https://pre-commit.com for more information
-# See https://pre-commit.com/hooks.html for more hooks
-
 # Baseline hooks and config updated 2024-09-25
 # Web hooks and config updated 2024-09-25
 # Docs hooks and config updated 2024-09-25
@@ -17,11 +14,6 @@ exclude: '\.(min\.(js|css)|pot?)$'
 
 
 repos:
-# Meta checks
-- repo: meta
-  hooks:
-  - id: check-useless-excludes
-
 # General fixers
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.6.0
@@ -57,10 +49,10 @@ repos:
   # since codespell doesn't print verbose output when writing changes
   - id: codespell
     name: Check spelling
-    exclude: '\.gitattributes|\bworkshops\b'
+    exclude: '\.gitattributes'
   - id: codespell
     name: Fix spelling
-    exclude: '\.gitattributes|\bworkshops\b'
+    exclude: '\.gitattributes'
     args: [--write-changes]
 
 # Lint and fix CSS with stylelint
@@ -151,7 +143,6 @@ repos:
   - id: black
     name: Format Python with Black
     args: ['--config', '.black.toml']
-    exclude: '\bworkshops\b'
 
 # Check Python
 - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -166,14 +157,12 @@ repos:
   hooks:
   - id: flake8
     name: Lint Python with Flake8
-    exclude: '\bworkshops\b'
 
 - repo: https://github.com/pycqa/pylint
   rev: v3.3.1
   hooks:
   - id: pylint
     name: Lint Python with Pylint
-    exclude: '\bworkshops\b'
 
 # Check Python dependencies
 - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
@@ -219,7 +208,6 @@ repos:
   hooks:
   - id: pretty-format-yaml
     name: Format YAML
-    exclude: '\bworkshops\b|crowdin.ya?ml'
     args: [--autofix, --indent, '2', --preserve-quotes]
 
 # Check YAML
